tests/negative/symbols/undefined.orng
// error: use of identifier `x` before its definition
// 
fn main() -> Int {
    let y = x
    let x = 0
    y
}